<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/InputLabel"
        android:text="@string/paymentresume_alert_title" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp" >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/icon_money"/>
        <TextView
            android:id="@+id/txtAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorMoney"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            tools:text="######.##"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_typecurrency"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorMoney"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp" >

        <ImageView
            android:id="@+id/imgPaymentMethod"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            tools:background="#000"/>
        <TextView
            android:id="@+id/txtPaymentMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            tools:text="[TEXT]"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp" >

        <ImageView
            android:id="@+id/imgIssuer"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            tools:background="#000"/>
        <TextView
            android:id="@+id/txtIssuer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            tools:text="[TEXT]"/>
    </LinearLayout>
    <TextView
        android:id="@+id/txtPayerCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="[TEXT]"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_margin="10dp"
        android:paddingTop="10dp"
        android:background="@drawable/shape_bordertop">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:paddingBottom="5dp"
            android:text="@string/paymentresume_alert_yourpayment"/>
        <TextView
            android:id="@+id/txtPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorMoney"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:paddingBottom="5dp"
            tools:text="######.##"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_typecurrency"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorMoney"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:paddingBottom="5dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <Button
        style="@style/NextButton"
        android:id="@+id/btnClose"
        android:layout_width="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/app_close"/>
</LinearLayout>